--- a/spring-config/config-dev.yml
+++ b/spring-config/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch , springcloud-config/config-test.yml version=222222222222222"
+  info: "master branch , springcloud-config/config-test.yml version=2"
